@@ -251,7 +251,6 @@ char *TCPNAMES[CF_NETATTR] =
   PROTECTED  struct Item *VMOUNTLIST = NULL;
   PROTECTED  struct Item *VEXCLUDECOPY = NULL;
   PROTECTED  struct Item *VAUTODEFINE = NULL;
-  PROTECTED  struct Item *VSINGLECOPY = NULL;
   PROTECTED  struct Item *VEXCLUDELINK = NULL;
   PROTECTED  struct Item *VCOPYLINKS = NULL;
   PROTECTED  struct Item *VLINKCOPIES = NULL;
@@ -718,6 +717,7 @@ char *TCPNAMES[CF_NETATTR] =
   PRIVATE short NOSPLAY = false;
   PRIVATE short DONESPLAY = false;
 
+  PUBLIC  struct Item *VSINGLECOPY = NULL;
 
   PROTECTED  struct Item *VACLBUILD = NULL;
   PROTECTED  struct Item *VFILTERBUILD = NULL;
